--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -4,70 +4,77 @@
 	<title>Business</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="container-fluid">
-		<header id="header">
-			<div class="row">
-				<nav class="nav nav-inverse nav-fixed-top">
-					<div class="nav-header">
-						<a class="navbar-brand" href="index.html">Cake Library</a>
-					</div>
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-		<div id="contact">
-			<div class="contact-header">
+	<nav class="navbar sticky-top navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm bg-info">
+    <!-- <a class="navbar-brand" href="#">Logo</a> -->
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="home.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="sign_up.html">Sign Up</a>
+      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link" href="">Services</a>
+      </li>  -->
+      <li class="nav-item">
+        <a class="nav-link" href="home.html#teams">Our Team</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="sign_in.html">Sign In</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
+      </li>
+    </ul>
+  </nav>
+	<section id="contact" style="padding-top: 20px">
+		<div class="container">
+			<div class="section-header">
 				<h2>Contact Us</h2>
-				<span class="border"></span>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa consectetur adipiscing elit. Praesent eget risus vitae massa semper aliquam quis mattis quam mattis.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
 			</div>
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<form>
-						<div class="form-group">
-							<input type="text" name="FirstName" id="fName" placeholder="Your Name...." class=form-control>
-						</div>
-						<div class="form-group">
-							<input type="mail" name="EmailAddress" id="email" placeholder="Email Address..." class="form-control">
-						</div>
-						<div class="form-group">
-							<textarea name="subject" id="subject" style="height: 150px" class="form-control" placeholder="Message"></textarea>
-						</div>
-						<div>
-							<input type="submit" name="sumbit" value="SEND" class="btn btn-primary col-md-offset-6">
-						</div>
+			<div class="row justify-content-md-center">
+				<div class="col-md-8 col-md-offset-2 conForm">       
+					<div id="message"></div>
+					<form method="post" action="php/contact.php" name="cform" id="cform">
+						<input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Your name..." >
+						<input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" placeholder="Email Address..." >
+						<textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Message..."></textarea>
+						<input type="submit" id="submit" name="send" class="submitBnt" value="Send">
+						<div id="simple-msg"></div>
 					</form>
 				</div>
 			</div>
-	</div>
-	<footer>
-			<div class="row">
-			<div class="col-md-4 col-md-offset-8  contact-us">
-					<h4 style="color:green;">Contact Us</h4>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container-fluid">
+			<div id="map-row" class="row">
+				<div class="col-sm-8">    
+					<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?f=q&source=s_q&hl=en&geocode=&q=15+Springfield+Way,+Hythe,+CT21+5SH&aq=t&sll=52.8382,-2.327815&sspn=8.047465,13.666992&ie=UTF8&hq=&hnear=15+Springfield+Way,+Hythe+CT21+5SH,+United+Kingdom&t=m&z=14&ll=51.077429,1.121722&output=embed"></iframe> 
+
+				</div>
+				<div class="col-sm-4">
+					<h2>Contact us</h2>
 					<address>
-						<strong>Company Name</strong><br>
+						<strong>Company name</strong><br>
 						1234 Street Dr.<br>
 						Vancouver, BC<br>
 						Canada<br>
 						V6G 1G9<br>
-						Tel: (604) 555-4321 
+						<abbr title="Phone">Tel:</abbr> (604) 555-4321
 					</address>
-					© 2018 Company Name. Template by <a href="#">WebThemez.com.</a><br>Find more <a href="#">Bootstrap Templates</a>
-  				</div>
+					© 2018 Company Name. Template by <a href="http://webthemez.com" title="Bootstrap Themes" target="_blank" >WebThemez.com</a>.<br/>
+					Find more <a href="http://webthemez.com/free-bootstrap-templates" title="Bootstrap Templates" target="_blank" >Bootstrap Templates</a>
+				</div>
 			</div>
-			</div>
-		</footer>
-	</div>
+		</div>
+	</footer>
 	
 </body>
 </html>
