--- a/Assignment1/home.html
+++ b/Assignment1/home.html
@@ -3,24 +3,23 @@
 <head>
   <title>nav</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../Assignment/style.css">
+  <!-- <link rel="stylesheet" type="text/css" href="../Assignment/style.css"> -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <nav class="navbar sticky-top navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm bg-info">
     <!-- <a class="navbar-brand" href="#">Logo</a> -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="home.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="sign_up.html">Sign Up</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#content-3-10">About</a>
-      </li> 
-      <li class="nav-item">
-        <a class="nav-link" href="#gallery">Gallery</a>
-      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link" href="#content-3-10">Services</a>
+      </li>  -->
       <li class="nav-item">
         <a class="nav-link" href="#teams">Our Team</a>
       </li>
@@ -28,10 +27,77 @@
         <a class="nav-link" href="sign_in.html">Sign In</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>
     </ul>
   </nav>
+  <img src="photo/photo.jpg" class="img-fluid">
 
+  <section id="teams" class="section teams">
+    <div class="container">
+      <div class="section-header">
+        <h2>Our Team</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
+      </div>
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <div class="person"><img src="photo/team-1.jpg" alt="" class="img-responsive">
+            <div class="person-content">
+              <h4>Jonh Dow</h4>
+              <h5 class="role">Founder</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            </div>
+            <ul class="social-icons clearfix">
+              <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+              <li><a href="#"><span class="fa fa-twitter"></span></a></li> 
+              <li><a href="#"><span class="fa fa-google-plus"></span></a></li> 
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="person"> <img src="photo/team-2.jpg" alt="" class="img-responsive">
+            <div class="person-content">
+              <h4>Markus Linn</h4>
+              <h5 class="role">Creative</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            </div>
+            <ul class="social-icons clearfix">
+              <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
+              <li><a href="#" class=""><span class="fa fa-twitter"></span></a></li> 
+              <li><a href="#" class=""><span class="fa fa-google-plus"></span></a></li> 
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="person"> <img src="photo/team-3.jpg" alt="" class="img-responsive">
+            <div class="person-content">
+              <h4>Chris Jemes</h4>
+              <h5 class="role">Technical</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            </div>
+            <ul class="social-icons clearfix">
+              <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
+              <li><a href="#" class=""><span class="fa fa-twitter"></span></a></li> 
+              <li><a href="#" class=""><span class="fa fa-google-plus"></span></a></li> 
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="person"> <img src="photo/team-4.jpg" alt="" class="img-responsive">
+            <div class="person-content">
+              <h4>Vintes Mars</h4>
+              <h5 class="role">Marketing</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            </div>
+            <ul class="social-icons clearfix">
+              <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
+              <li><a href="#" class=""><span class="fa fa-twitter"></span></a></li> 
+              <li><a href="#" class=""><span class="fa fa-google-plus"></span></a></li> 
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
