--- a/Assignment1/sign_up.html
+++ b/Assignment1/sign_up.html
@@ -6,6 +6,29 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body  style="background-color: lightblue">
+		<nav class="navbar navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm bg-info">
+    <!-- <a class="navbar-brand" href="#">Logo</a> -->
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="home.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="sign_up.html">Sign Up</a>
+      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link" href="#content-3-10">Services</a>
+      </li>  -->
+      <li class="nav-item">
+        <a class="nav-link" href="home.html#teams">Our Team</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="sign_in.html">Sign In</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
+      </li>
+    </ul>
+  </nav>
 		<div class="container-fluid form-row justify-content-md-center">
 			<div class="col-md-4 col-md-offset-4 signup">
 				<form>
