image width change

--- a/Assignment1/home.html
+++ b/Assignment1/home.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
   <nav class="navbar sticky-top navbar-dark navbar-expand-lg navbar-expand-md navbar-expand-sm bg-info">
     <!-- <a class="navbar-brand" href="#">Logo</a> -->
     <ul class="navbar-nav ml-auto">
@@ -31,7 +32,8 @@
       </li>
     </ul>
   </nav>
-  <img src="photo/photo.jpg" class="img-fluid">
+  
+  <img src="photo/photo.jpg" style="width: 100%">
 
   <section id="teams" class="section teams">
     <div class="container">
