--- a/Assignment1/Home.html
+++ b/Assignment1/Home.html
@@ -13,10 +13,10 @@
     <!-- <a class="navbar-brand" href="#">Logo</a> -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" href="Home.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="sign_up.html">Sign Up</a>
+        <a class="nav-link" href="SignUp.html">Sign Up</a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link" href="#content-3-10">Services</a>
@@ -25,17 +25,17 @@
         <a class="nav-link" href="#teams">Our Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="sign_in.html">Sign In</a>
+        <a class="nav-link" href="Login.html">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
   
   <img src="photo/photo.jpg" style="width: 100%">
 
-  <section id="teams" class="section teams">
+  <section id="teams" class="section">
     <div class="container">
       <div class="section-header">
         <h2>Our Team</h2>
@@ -101,5 +101,47 @@
       </div>
     </div>
   </section>
+  <!-- <section  class="section"> -->
+		<div id="contact" class="container">
+			<div class="section-header">
+				<h2>Contact Us</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
+			</div>
+			<div class="row justify-content-md-center">
+				<div class="col-md-8 col-md-offset-2 conForm">       
+					<div id="message"></div>
+					<form method="post" action="php/contact.php" name="cform" id="cform">
+						<input name="name" id="name" type="text" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Your name..." >
+						<input name="email" id="email" type="email" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 noMarr" placeholder="Email Address..." >
+						<textarea name="comments" id="comments" cols="" rows="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Message..."></textarea>
+						<input type="submit" id="submit" name="send" class="submitBnt" value="Send">
+						<div id="simple-msg"></div>
+					</form>
+				</div>
+			</div>
+		</div>
+	<!-- </section> -->
+  <footer class="footer">
+		<div class="container-fluid">
+			<div id="map-row" class="row">
+				<div class="col-sm-8">    
+					<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?f=q&source=s_q&hl=en&geocode=&q=15+Springfield+Way,+Hythe,+CT21+5SH&aq=t&sll=52.8382,-2.327815&sspn=8.047465,13.666992&ie=UTF8&hq=&hnear=15+Springfield+Way,+Hythe+CT21+5SH,+United+Kingdom&t=m&z=14&ll=51.077429,1.121722&output=embed"></iframe> 
+				</div>
+				<div class="col-sm-4">
+					<h2>Contact us</h2>
+					<address>
+						<strong>Company name</strong><br>
+						1234 Street Dr.<br>
+						Vancouver, BC<br>
+						Canada<br>
+						V6G 1G9<br>
+						<abbr title="Phone">Tel:</abbr> (604) 555-4321
+					</address>
+					© 2018 Company Name. Template by <a href="http://webthemez.com" title="Bootstrap Themes" target="_blank" >WebThemez.com</a>.<br/>
+					Find more <a href="http://webthemez.com/free-bootstrap-templates" title="Bootstrap Templates" target="_blank" >Bootstrap Templates</a>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
